--- a/36kr.html
+++ b/36kr.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicon.ico">
-  <title> 36Kr快讯 </title>
-  <meta name="description" content="36Kr快讯">
+  <title> 36Kr 快讯 | 开发者工具箱 </title>
+  <meta name="description" content="">
   <style>
     * { box-sizing: border-box; }
     html, body, ul, li, h1 { margin: 0; padding: 0 }
@@ -21,7 +21,7 @@
     .title { padding: 46px 0 0 0; font-size: 18px; line-height: 24px; }
     .time, .footer { padding: 5px 0 2px 0; font-size: 12px; color: #adadad; }
     .tabs { padding: 10px 0 15px 0;}
-    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; }
+    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; margin: .3rem 0; }
     .tabs a.active { background: #696969; color: #efefef; }
     .footer { padding: 10px 0 30px 0; }
     .list { text-align: left; max-width: 470px; margin: 0 auto; padding-bottom: 10px; background-color: #efefef; border-radius: 5px; overflow: hidden; }
@@ -62,23 +62,24 @@
   </style>
 </head>
 <body>
-  <a href="https://github.com/jaywcjlove/github-rank" target="_blank" class="github-corner">
+  <a href="https://github.com/shfshanyue/github-rank" target="_blank" class="github-corner">
     <svg viewBox="0 0 250 250">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path class="octo-arm" fill="currentColor" style="transform-origin: 130px 106px;" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"></path>
       <path fill="currentColor" class="octo-body" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"></path>
     </svg>
   </a>
-  <h1 class="title"> 36Kr快讯 </h1>
-  <div class="time">Last cache created on 2021/1/22 by Github API v3.</div>
+  <h1 class="title"> 36Kr 快讯 </h1>
+  <div class="time">Last cache created on 2021/1/23 by Github API v3.</div>
   <div class="tabs">
-    <a class="" href="index.html">Users</a>
-    <a class="" href="repos.html">Repos</a>
-    <a class="" href="trending.html">Trending</a>
-    <a class="" href="sifou-daily.html">Sifou</a>
-    <a class="" href="toutiao-7.html">开发头条</a>
+    <a class="" href="index.html">开发者头条</a>
+    <a class="" href="sifou-daily.html">Segmentfault Top</a>
     <a class="active" href="36kr.html">36Kr</a>
+    <a class="" href="users.china.html">Github Top Users</a>
+    <a class="" href="repos.html">Github Top Repos</a>
+    <a class="" href="trending.html">Github Trending</a>
   </div>
+
 <ul class="list">
     <li class="rank-title">
       <a href="https://36kr.com/newsflashes" target="_blank">36Kr快讯</a>
@@ -758,22 +759,23 @@
     
 </ul>
   <div class="footer">
-    <p>
-      <a href="https://github.com/jaywcjlove/github-rank/network" target="_blank">
-        <img src="https://img.shields.io/github/forks/jaywcjlove/github-rank.svg">
-      </a>
-      <a href="https://github.com/jaywcjlove/github-rank/stargazers" target="_blank">
-        <img src="https://img.shields.io/github/stars/jaywcjlove/github-rank.svg">
-      </a>
-      <a href="https://www.npmjs.com/package/@wcj/github-rank" target="_blank">
-        <img src="https://img.shields.io/npm/v/@wcj/github-rank.svg">
-      </a>
-      <a href="https://unpkg.com/@wcj/github-rank/web/index.html" target="_blank">
-        <img src="https://img.shields.io/npm/v/@wcj/github-rank.svg?label=unpkg">
-      </a>
-    </p>
-    <div class="time">Last cache created on 2021/1/22 by Github API v3.</div>
-    Create by <a href="https://github.com/jaywcjlove" target="_blank">小弟调调™</a>.
+    <!-- /* <p> */
+    /*   <a href="https://github.com/jaywcjlove/github-rank/network" target="_blank"> */
+    /*     <img src="https://img.shields.io/github/forks/jaywcjlove/github-rank.svg"> */
+    /*   </a> */
+    /*   <a href="https://github.com/jaywcjlove/github-rank/stargazers" target="_blank"> */
+    /*     <img src="https://img.shields.io/github/stars/jaywcjlove/github-rank.svg"> */
+    /*   </a> */
+    /*   <a href="https://www.npmjs.com/package/@wcj/github-rank" target="_blank"> */
+    /*     <img src="https://img.shields.io/npm/v/@wcj/github-rank.svg"> */
+    /*   </a> */
+    /*   <a href="https://unpkg.com/@wcj/github-rank/web/index.html" target="_blank"> */
+    /*     <img src="https://img.shields.io/npm/v/@wcj/github-rank.svg?label=unpkg"> */
+    /*   </a> */
+    /* </p> */ -->
+    <div class="time">Last cache created on 2021/1/23 by Github API v3.</div>
+    Powerd by <a href="https://github.com/jaywcjlove/github-rank" target="_blank">github-rank</a>.
   </div>
 </body>
 </html>
+
