deploy: 43453ce6a0c4b3d5857ca257cd388bb22a3c07e4

--- a/toutiao-30.html
+++ b/toutiao-30.html
@@ -21,10 +21,13 @@
     .title { padding: 46px 0 0 0; font-size: 18px; line-height: 24px; }
     .time, .footer { padding: 5px 0 2px 0; font-size: 12px; color: #adadad; }
     .tabs { padding: 10px 0 15px 0;}
-    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; margin: .3rem 0; }
+    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 14px; line-height: 1.5em; color: #0366d6; margin: .3rem 0; }
     .tabs a.active { background: #696969; color: #efefef; }
     .footer { padding: 10px 0 30px 0; }
     .list { text-align: left; max-width: 470px; margin: 0 auto; padding-bottom: 10px; background-color: #efefef; border-radius: 5px; overflow: hidden; }
+
+    @media (min-width: 960px) { .list { max-width: 960px; } }
+
     .list img { width: 36px; height: 36px; border-radius: 3px; display: block; margin: 0 auto; background-color: #e2e2e2; border: 0; overflow: hidden; }
     .list a { color: #0366d6; }
     .list a:hover { color: #1600ff; }
@@ -92,7 +95,7 @@
     <li class="rank-title">
       <a href="https://toutiao.io/posts/hot/7" target="_blank">头条 热门分享</a>
       <span class="select">
-        <a class="" href="toutiao-7.html">7天</a>
+        <a class="" href="/">7天</a>
         <a class="active" href="toutiao-30.html">30天</a>
         <a class="" href="toutiao-90.html">90天</a>
       </span>
@@ -354,7 +357,7 @@
             <path d="M0 0h16v16H0z"/>
             <path fill="#9E9E9E" d="M4.234 6.693v7.243H2.881c-.486 0-.881-.492-.881-1.095V7.875c0-.63.412-1.182.88-1.182h1.354zm3.688-3.7C8.01 2.404 8.49 1.99 9.018 2c.754.015 1.204.663 1.36.983.284.585.292 1.549.097 2.167-.177.56-.586 1.296-.586 1.296h3.066c.324 0 .625.164.826.449.204.29.27.668.178 1.011l-1.387 5.183c-.126.499-.544.847-1.016.847H5.53V6.693c1.385-.309 2.236-2.632 2.392-3.7z"/>
           </g>
-        </svg><span>116</span>
+        </svg><span>118</span>
       </div>
     </li>
     
@@ -692,7 +695,7 @@
             <path d="M0 0h16v16H0z"/>
             <path fill="#9E9E9E" d="M4.234 6.693v7.243H2.881c-.486 0-.881-.492-.881-1.095V7.875c0-.63.412-1.182.88-1.182h1.354zm3.688-3.7C8.01 2.404 8.49 1.99 9.018 2c.754.015 1.204.663 1.36.983.284.585.292 1.549.097 2.167-.177.56-.586 1.296-.586 1.296h3.066c.324 0 .625.164.826.449.204.29.27.668.178 1.011l-1.387 5.183c-.126.499-.544.847-1.016.847H5.53V6.693c1.385-.309 2.236-2.632 2.392-3.7z"/>
           </g>
-        </svg><span>16</span>
+        </svg><span>18</span>
       </div>
     </li>
     
