deploy: 78e2f82589666df1ddc7d572eea719bb6c434d4d

--- a/36kr.html
+++ b/36kr.html
@@ -61,6 +61,15 @@
       40%,80%{-webkit-transform:rotate(10deg); transform:rotate(10deg);}
     }
   </style>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbfd40923fbbfe37ed7ede2356b33032";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <style>
   </style>
 </head>
