--- a/36kr.html
+++ b/36kr.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="baidu-site-verification" content="code-1pAfOYOove" />
   <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicon.ico">
   <title> 36Kr 快讯 | 开发者工具箱 </title>
   <meta name="description" content="">
@@ -84,7 +85,7 @@
   <h1 class="title"> 36Kr 快讯 </h1>
   <div class="time">Last cache created on 2021/1/23 by Github API v3.</div>
   <div class="tabs">
-    <a class="" href="index.html">开发者头条</a>
+    <a class="" href="/">开发者头条</a>
     <a class="" href="sifou-daily.html">Segmentfault Top</a>
     <a class="active" href="36kr.html">36Kr</a>
     <a class="" href="users.china.html">Github Top Users</a>
