--- a/toutiao-90.html
+++ b/toutiao-90.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="baidu-site-verification" content="code-1pAfOYOove" />
   <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicon.ico">
   <title> 开发者头条热门文章 | 最近90天 | 开发者工具箱 </title>
   <meta name="description" content="开发者头条中的头条，互联网最优秀的技术文章都汇聚于此，包括 Java/Go/Python/Redis/MySQL/k8s/Docker 等等">
@@ -92,7 +93,7 @@
   <h1 class="title"> 开发者头条热门文章 | 最近90天 </h1>
   <div class="time">Last cache created on 2021/1/23 by Github API v3.</div>
   <div class="tabs">
-    <a class="active" href="index.html">开发者头条</a>
+    <a class="active" href="/">开发者头条</a>
     <a class="" href="sifou-daily.html">Segmentfault Top</a>
     <a class="" href="36kr.html">36Kr</a>
     <a class="" href="users.china.html">Github Top Users</a>
